# effect-lang

./: Cargo.toml  LICENSE
src/: bytecode.rs  compile.rs  error_report.rs  hlir.rs  intern.rs  interpreter.rs  ir.rs  lexer.rs  lower.rs  main.rs  parser.rs  typecheck.rs
src/bytecode/: optimize.rs  program.rs
src/hlir/: index.rs  name_resolve.rs  pretty.rs  simplify.rs  test.rs  typecheck.rs  visitor.rs
src/interpreter/: builtin.rs  standard.rs  test.rs
src/ir/: name_resolve.rs
src/typecheck/: test.rs  typestore.rs
