[package]
name = "effect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "*"
lasso = { version = "*", features = ["multi-threaded"] }
logos = "*"
derive_more = "*"
colored = "*"
unindent = "*"
once_cell = "*"
tinyvec = { version = "*", features = ["alloc"] }
dbg-pls = { version = "*", features = ["derive", "pretty"] }

[dev-dependencies]
pretty_assertions = "*"
